[package]
name = "videobackup-rs"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crc32fast = "1.2.1"
image = "0.23.14"
reed-solomon = "0.2.1"
num_cpus = "1.13.0"
path-absolutize = "3.0.10"